--- a/src/Components/LeftSide.css
+++ b/src/Components/LeftSide.css
@@ -4,6 +4,9 @@
     max-width: 30%;
     text-align: left;
     padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    
 
 }
 img
